# stm32fxxx

./: .gitignore  LICENSE  README.md
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: 01-RTC.language.settings.xml  03-LCD_Test.language.settings.xml  Application.1729168011225.pdom  Application.language.settings.xml  Bootloader.language.settings.xml  F405Uart.1730796556069.pdom  F405Uart.language.settings.xml  F405_LCD.1730734917085.pdom  F405_LCD.language.settings.xml  bootloader.language.settings.xml  led.language.settings.xml  stm32h7_lcd.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 6.snap
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
01-RTC/: .cproject  .mxproject  01-RTC.ioc
01-RTC/Debug/: 01-RTC.elf  01-RTC.list  01-RTC.map  makefile  objects.list
03-LCD_Test/: .cproject  .mxproject  03-LCD_Test.ioc
03-LCD_Test/Core/Inc/: main.h  stm32h7xx_hal_conf.h
03-LCD_Test/Core/Src/: gpio.c  main.c  rtc.c  tim.c
Application/: .cproject  .mxproject  Application.ioc
Application/Core/Src/: main.c
Application/Debug/: Application.elf  Application.list  Application.map  makefile
Bootloader/: .cproject  Bootloader.ioc
Bootloader/Core/Src/: main.c
Bootloader/Debug/: Bootloader.elf  Bootloader.list  Bootloader.map  makefile
F405/: CMakeLists.txt  F405.ioc  F405.launch  STM32F405RGTX_FLASH.ld
F405/Bsp/: board.c  board.h
F405/Bsp/BMP280/: bmp280.c  bmp280.h
F405/Bsp/ICM20948/: icm20948.c  icm20948.h
F405/Bsp/IMU10DOF/: Waveshare_10Dof-D.c  Waveshare_10Dof-D.h
F405/Debug/: F405.elf  F405.list  F405.map  makefile  objects.list  sources.mk
F405Uart/: .cproject  .mxproject  .project  F405Uart.ioc
F405Uart/Debug/: F405Uart.elf  F405Uart.hex  F405Uart.list  F405Uart.map  makefile  objects.list  sources.mk
F405_LCD/: .cproject  .mxproject  .project  F405_LCD.ioc
F405_LCD/Debug/: F405_LCD.elf  F405_LCD.hex  F405_LCD.list  F405_LCD.map  makefile  objects.list  sources.mk
imu_viz/: CMakeLists.txt  main.cpp  ring_buffer.h
stm32h7_lcd/: .cproject  .mxproject  .project  stm32h7_lcd.ioc
(+88 files in other folders)
